--- a/A/Index.htm
+++ b/A/Index.htm
@@ -28,6 +28,7 @@
         <li>BBs</li>
         <li>Matematica</li>
         <li>etica</li>
+        <li>etica</li>
     </ul>
     <p>Lorem , dolor sit amet consectetur adipisicing elit.</p>
     <p>Impedit quaerat hic culpa, odit nostrum sit recusandae
